src/main/java/com/example/citronix/web/errors/DateOfFermeException.java
package com.example.citronix.web.errors;

public class DateOfFermeException extends RuntimeException{
    public DateOfFermeException(String message){super(message);}
}
